# goopenjpeg

./: .gitignore  README.md  reference_compliance_test.go
.github/actions/build-native/: action.yml
.github/workflows/: build.yml
internal/testdata/: testdata.go
lib/: CMakeLists.txt
native/: native.go
native/libs/: goopenjpeg_darwin_arm64.dylib
scripts/: fetch-testdata.sh
